# ResearcherRouter

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  qdrant.py  test_paper.py
cogs/: Commands.py  Events.py
config/: .dockerignore  Dockerfile  docker-compose.yml
config/qdrant_storage/: raft_state.json
config/qdrant_storage/collections/cool_papers/0/: newest_clocks.json  replica_state.json
config/qdrant_storage/collections/cool_papers/0/segments/1e1a667e-63dc-429c-a4a6-d94da16c2f52/: mutable_id_tracker.mappings  mutable_id_tracker.versions
config/qdrant_storage/collections/cool_papers/0/segments/2bb00de0-f6a0-43ec-80f0-6eee551fb241/: mutable_id_tracker.mappings
config/qdrant_storage/collections/cool_papers/0/segments/32f09a6e-e0a4-423d-b6bc-b89b700cae97/: mutable_id_tracker.mappings  mutable_id_tracker.versions
config/qdrant_storage/collections/cool_papers/0/segments/5064a93f-8f82-4f9d-b070-229beeadc847/: mutable_id_tracker.mappings
config/qdrant_storage/collections/cool_papers/0/segments/758c4451-b944-470c-b5c7-b63aef4e7b22/: mutable_id_tracker.mappings
logic/: addMember.py  addThread.py  getThreadData.py  updateThreadData.py
scratch/: README.md  ex_qdrant_flow.py  pyproject.toml
src/bot/: main.py
src/bot/cogs/: Commands.py  Events.py
src/bot/logic/: addTag.py  addThread.py  add_log_tag.py  add_thread.py  getThreadData.py  initialize.py  on_message_update.py  thread_summary.py  updateThreadData.py
src/bot/pydantic_configure/: __init__.py  pydantic_conf.py
src/qdrant/: qdrant.py
(+35 files in other folders)
